# diy-firestore

./: .dir-locals.el~  .gitignore  .lintstagedrc.json  .pnp.cjs  .prettierignore  01-intro.md  02-defining-requirements.md  03-the-basic-database.md  04-basic-operations.md  04-queries-first-attempt.md  05-basic-subscriptions.md  05-custom-comparator.md  06-queries-first-attempt.md  06-simple-queries-take-two.md  07-composite-queries.md  07-custom-comparator.md  08-security-rules.md  08-simple-queries-take-two.md  09-simple_query-subscriptions.md  09-subscription-update-queues.md  10-composite-queries.md  11-bonus-features-and-configurability.md  11-composite-subscriptions.md  11-transactions.md  12-subscription-update-queues.md  13-client-connection-server.md  14-transactions.md  15-bonus-features-and-configurability.md  15-security-rules.md  16-bonus-features-and-configurability.md  README.md  Setup.txt  lint-staged.config.js  next.config.js  notion-dark-classic.css  notion-light-classic.css  package.json  sql-commands.txt  tsconfig.json
firestore-server/: Cargo.toml  build.rs
firestore-server/src/: basic_read.rs  client_connection_endpoint.rs  composite_query.rs  main.rs  security_rules.rs  simple_query.rs  sql_types.rs  transaction.rs  update_queue.rs  utils.rs  write.rs
firestore-server/src/post/: mod.rs  post_04_initial_write_operations.rs  post_05_basic_subscriptions.rs  post_08_simple_queries.rs  post_09_simple_query_subscriptions.rs  post_10_composite_queries.rs  post_11_composite_subscriptions.rs  post_11_update_queues.rs
firestore-server/src/protos/: mod.rs  (+1 more)
(+153 files in other folders)
