[package]
name = "firestore-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11"
# Only necessary if using Protobuf well-known types:
prost-types = "0.11"
postgres = "0.19.4"
postgres-types = { version = "0.2.4", features = ["derive"] }
bytes = "1.3.0"
itertools = "0.10.5"
sql_query_builder = { path = "../../sql_query_builder", features = ["postgresql"] }
uuid = { version = "1.2.2", features = ["v4"] }
stopwatch = "0.0.7"

[build-dependencies]
prost-build = "0.11"
